syntax = "proto3";

package participant;

import "google/protobuf/timestamp.proto";

enum ParticipantStatus {
  Active = 0;
  Banned = 1;
}

service ParticipantService {
  rpc AddParticipantToChannel(AddParticipantToChannelReq) returns (ParticipantClient);
}

message ParticipantCreateRes {
  ParticipantClient participant = 1;
  string accessToken = 2;
  ChannelParticipantGrants grants = 3;
}

message ChannelParticipantGrants {
  bool sendMessage = 1;
  bool readMessages = 2;
  bool admin = 3;
}

message ParticipantClient {
  string identifier = 1;
  google.protobuf.Timestamp createdAt = 2;
  ParticipantStatus status = 3;
  string channelId = 4;
}

message AddParticipantToChannelReq {
  string identifier = 1;
  string channelId = 2;
  ChannelParticipantGrants grants = 5;
}
